--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,3 +36,17 @@
 .form-inputs {
   @apply w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500;
 }
+
+/* Home - Category */
+.nxt-prv {
+  @apply absolute top-1/2 transform -translate-y-1/2 p-2 bg-gray-200 rounded-full;
+}
+
+/* Home - latestjobs */
+.job-p {
+  @apply font-bold p-1 border rounded-lg;
+}
+
+.job-card {
+  @apply p-5 rounded-xl shadow-2xl bg-white border-gray-200 cursor-pointer;
+}
